Add api connection

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,22 @@
-<h1 class="text-3xl font-bold text-red-500">Hello World</h1>
+<div class="h-dvh w-dvw">
+  @for (task of tasks; track $index) {
+    <table class="border">
+      <tr>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Created</th>
+        <th>Updated</th>
+        <th>Due</th>
+      </tr>
+      <tr>
+        <td>{{ task.id }}</td>
+        <td>{{ task.title }}</td>
+        <td>{{ task.description }}</td>
+        <td>{{ task.created }}</td>
+        <td>{{ task.updated }}</td>
+        <td>{{ task.due }}</td>
+      </tr>
+    </table>
+  }
+</div>
