Add authentication feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,36 @@
-<nav>
-  <ul>
-    <li>
-      <a
-        routerLink="/login"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        >Login</a
-      >
-    </li>
-  </ul>
-</nav>
-<!-- The routed views render in the <router-outlet>-->
-<router-outlet></router-outlet>
+<div class="h-dvh w-dvw">
+  <nav>
+    <ul class="flex gap-2">
+      @if (authService.currentUserSig() === null) {
+        <li>
+          <a
+            routerLink="/login"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+          >Login</a
+          >
+        </li>
+        <li>
+          <a
+            routerLink="/register"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+          >Registration</a
+          >
+        </li>
+      }
+      @if (authService.currentUserSig()) {
+        <li>
+          {{ authService.currentUserSig()?.username}}
+          <button (click)="onLogout()">Logout</button>
+        </li>
+      }
+    </ul>
+  </nav>
+  <main>
+    @if (authService.currentUserSig()) {
+      <span>YOU ARE LOGGED IN {{ authService.currentUserSig()?.username }}</span>
+    }
+    <router-outlet></router-outlet>
+  </main>
+</div>
