--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,10 +1,10 @@
 <div class="h-full w-full flex justify-center items-center">
   <div class="h-1/3 w-[600px] shadow-xl rounded-lg border p-8">
-    <h1 class="text-3xl font-bold">Welcome back!</h1>
-    <form [formGroup]="loginData" (submit)="onLogin()">
+    <h1 class="text-3xl font-bold">Welcome!</h1>
+    <form [formGroup]="registerData" (submit)="onRegister()">
       <div class="mt-4">
         <label for="email" class="block text-sm font-medium text-gray-700"
-          >Email</label
+        >Email</label
         >
         <input
           placeholder="johndoe@example.com"
@@ -15,8 +15,20 @@
           class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" />
       </div>
       <div class="mt-4">
+        <label for="email" class="block text-sm font-medium text-gray-700"
+        >Username</label
+        >
+        <input
+          placeholder="john doe"
+          type="text"
+          id="username"
+          name="username"
+          formControlName="username"
+          class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" />
+      </div>
+      <div class="mt-4">
         <label for="password" class="block text-sm font-medium text-gray-700"
-          >Password</label
+        >Password</label
         >
         <input
           type="password"
@@ -30,14 +42,8 @@
           id="login"
           type="submit"
           class="w-full bg-black text-white p-2 rounded-md">
-          Login
+          Register
         </button>
-        <label for="login">
-          <p class="text-sm font-thin">
-            Don't have an account?
-            <a [routerLink]="['/register']" class="font-semibold underline">Sign Up</a>
-          </p>
-        </label>
       </div>
     </form>
   </div>
