--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="h-full w-full flex justify-center items-center">
-  <div class="h-1/3 w-[600px] shadow-xl rounded-lg border p-8">
+  <div class="h-[325px] w-[600px] shadow-xl rounded-lg border p-8">
     <h1 class="text-3xl font-bold">Welcome back!</h1>
     <form [formGroup]="loginData" (submit)="onLogin()">
       <div class="mt-4">
