Change Email to E-Mail

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
     <form [formGroup]="loginData" (submit)="onLogin()">
       <div class="mt-4">
         <label for="email" class="block text-sm font-medium text-gray-700"
-          >Email</label
+          >E-Mail</label
         >
         <input
           placeholder="johndoe@example.com"
