Fix router-outlet layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
-<header>
-  <app-nav></app-nav>
-</header>
-<main>
-  <router-outlet></router-outlet>
-</main>
-<footer>
-  @if (authService.currentUserSig()) {
-    <span
-    >YOU ARE LOGGED IN {{ authService.currentUserSig()?.username }}</span
-    >
-  }
-</footer>
+<div class="flex flex-col min-h-dvh">
+    <app-nav></app-nav>
+  <main class="flex flex-grow bg-gray-100 overflow-hidden">
+    <router-outlet></router-outlet>
+  </main>
+  <footer class="h-10 bg-gray-800 text-white flex items-center justify-center">
+    @if (authService.currentUserSig()) {
+      <span
+      >YOU ARE LOGGED IN {{ authService.currentUserSig()?.username }}</span
+      >
+    }
+  </footer>
+</div>
