--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,5 +1,5 @@
-<div class="h-full w-full flex justify-center items-center">
-  <div class="h-[400px] w-[600px] shadow-xl rounded-lg border p-8">
+<div class="h-full w-dvw flex justify-center items-center">
+  <div class="h-[400px] w-[600px] shadow-xl rounded-lg border p-8 bg-white">
     <h1 class="text-3xl font-bold">Welcome!</h1>
     <form [formGroup]="registerData" (submit)="onRegister()">
       <div class="mt-4">
