Add dashboard component

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 @defer {
   <div class="border w-dvw h-full flex justify-center items-center">
-    <p>dashboard works!</p>
+    <div class="border-l-4 border-2 border-green-500 rounded-md h-[300px] w-[300px]">
+    </div>
   </div>
 }
