--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -41,7 +41,8 @@
         <button
           id="login"
           type="submit"
-          class="w-full bg-black text-white p-2 rounded-md">
+          [disabled]="!registerData.valid"
+          class="w-full bg-black text-white p-2 rounded-md disabled:bg-zinc-600 disabled:hover:cursor-not-allowed">>
           Register
         </button>
       </div>
