--- a/src/app/pages/projects/components/dashboard/dashboard.component.html
+++ b/src/app/pages/projects/components/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 @defer {
-  <div class="border w-dvw h-full flex justify-center items-center">
-    <div class="border-l-4 border-2 border-green-500 rounded-md h-[300px] w-[300px]">
-    </div>
+  <div
+    class="border border-red-500 w-dvw h-full flex flex-col justify-center items-center">
+    <h1 class="text-black text-2xl font-bold font-sans">Dashboard</h1>
+    <button (click)="authService.logout()">Logout</button>
   </div>
 }
