Change menu to primeng menu

--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -1,4 +1,3 @@
-<!-- <nav class="h-12 border-b bg-white dark:bg-gray-dark dark:text-white font-sans"> -->
 <nav class="h-16 border-b bg-white font-sans font-normal flex">
   <div class="flex items-center gap-6 h-full w-1/2 pl-4">
     <div
@@ -7,11 +6,7 @@
     </div>
     <span class="text-neutral-400 text-lg">/</span>
     <div class="flex gap-2 items-center">
-      <div
-        class="bg-cyan-500 w-8 h-8 grid place-content-center rounded-full font-semibold text-xl text-white">
-        {{ getInitial() }}
-      </div>
-      <!-- <span>{{ authService.currentUserSig()?.username }}</span> -->
+      <app-user-avatar [label]="getInitial()" />
       <span>Ugur Sadiklar</span>
     </div>
     <span class="text-neutral-400 text-lg">/</span>
@@ -19,58 +14,12 @@
   </div>
   <div class="flex gap-4 items-center justify-end h-full w-1/2 pr-4">
     <div class="w-6 h-6 border border-black rounded-full"></div>
-    <button
-      [matMenuTriggerFor]="menu"
-      #menuTrigger
-      class="bg-cyan-500 w-10 h-10 grid place-content-center rounded-full font-semibold text-xl text-white">
-      {{ getInitial() }}
-    </button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item (click)="openDialog()">
-        Settings<mat-icon>settings</mat-icon>
-      </button>
-      <button mat-menu-item (click)="authService.logout()">
-        Logout<mat-icon>logout</mat-icon>
-      </button>
-    </mat-menu>
+    <div class="card flex justify-content-center">
+      <p-menu #menu [model]="items" [popup]="true" />
+      <app-user-avatar
+        [label]="getInitial()"
+        (click)="menu.toggle($event)"
+        class="hover:cursor-pointer" />
+    </div>
   </div>
 </nav>
-
-<!--
-<header class="h-16 bg-gray-800 text-white flex items-center justify-end pr-4">
-  <nav>
-    <ul>
-      @if (authService.currentUserSig() === null) {
-        @if (router.url === '/register') {
-          <li>
-            <a
-              class="px-3 py-1 rounded-md bg-zinc-500 hover:bg-zinc-600"
-              routerLink="/login"
-              routerLinkActive="active"
-            >Login</a
-            >
-          </li>
-        } @else {
-          <li>
-            <a
-              class="px-3 py-1 rounded-md bg-zinc-500 hover:bg-zinc-600"
-              routerLink="/register"
-              routerLinkActive="active"
-            >Register</a
-            >
-          </li>
-        }
-      }
-      @if (authService.currentUserSig()) {
-        <li>
-          <button
-            type="button"
-            class="px-3 py-1 rounded-md bg-zinc-500 hover:bg-zinc-600"
-            (click)="authService.logout()"
-          >Logout</button>
-        </li>
-      }
-    </ul>
-  </nav>
-</header>
--->
