--- a/src/app/shared/components/nav/components/user-settings-dialog/user-settings-dialog.component.html
+++ b/src/app/shared/components/nav/components/user-settings-dialog/user-settings-dialog.component.html
@@ -1,3 +1,4 @@
+<!--
 <div class="flex flex-col p-2">
   <div class="flex justify-end items-center">
     <button mat-dialog-close><mat-icon>close</mat-icon></button>
@@ -14,43 +15,68 @@
 
           <mat-divider></mat-divider>
         </div>
-        <!--
-        CHANGE USERNAME
-        -->
-        <div class="flex justify-between">
-          @if (!editMode.username) {
-            <span class="font-medium flex items-center"
-              >Username: {{ authService.currentUserSig()?.username }}
+
+<div class="flex justify-between">
+  @if (!editMode.username) {
+    <span class="font-medium flex items-center"
+    >Username: {{ authService.currentUserSig()?.username }}
             </span>
-          } @else {
-            <input [(ngModel)]="formData.username" class="flex items-center" />
-          }
-          <button
-            (click)="
+  } @else {
+    <input [(ngModel)]="formData.username" class="flex items-center" />
+  }
+  <button
+    (click)="
               editMode.username ? save('username') : toggleEditMode('username')
             ">
-            <mat-icon>{{ editMode.username ? 'check' : 'edit' }}</mat-icon>
-          </button>
-        </div>
-        <!--
-        CHANGE EMAIL
-        -->
-        <div class="flex justify-between">
-          @if (!editMode.email) {
-            <span class="font-medium flex items-center"
-              >E-Mail: {{ authService.currentUserSig()?.email }}
-            </span>
-          } @else {
-            <input [(ngModel)]="formData.email" class="flex items-center" />
-          }
-          <button
-            (click)="editMode.email ? save('email') : toggleEditMode('email')">
-            <mat-icon>{{ editMode.email ? 'check' : 'edit' }}</mat-icon>
-          </button>
-        </div>
-        <!--
-        -->
-      </div>
-    </div>
-  </mat-dialog-content>
+    <mat-icon>{{ editMode.username ? 'check' : 'edit' }}</mat-icon>
+  </button>
 </div>
+
+
+<div class="flex justify-between">
+  @if (!editMode.email) {
+    <span class="font-medium flex items-center"
+    >E-Mail: {{ authService.currentUserSig()?.email }}
+            </span>
+  } @else {
+    <input [(ngModel)]="formData.email" class="flex items-center" />
+  }
+  <button
+    (click)="editMode.email ? save('email') : toggleEditMode('email')">
+    <mat-icon>{{ editMode.email ? 'check' : 'edit' }}</mat-icon>
+  </button>
+</div>
+
+
+</div>
+</div>
+</mat-dialog-content>
+</div>
+
+-->
+
+<!-- PRIMENG DIALOG -->
+
+<!--
+<div class="card flex justify-content-center">
+  <p-dialog
+    header="Edit Profile"
+    [modal]="true"
+    [(visible)]="visible"
+    [style]="{ width: '25rem' }">
+    <span class="p-text-secondary block mb-5">Update your information.</span>
+    <div class="flex align-items-center gap-3 mb-3">
+      <label for="username" class="font-semibold w-6rem">Username</label>
+      <input pInputText id="username" class="flex-auto" autocomplete="off" />
+    </div>
+    <div class="flex align-items-center gap-3 mb-5">
+      <label for="email" class="font-semibold w-6rem">Email</label>
+      <input pInputText id="email" class="flex-auto" autocomplete="off" />
+    </div>
+    <div class="flex justify-content-end gap-2">
+      <p-button label="Cancel" severity="secondary" (click)="visible = false" />
+      <p-button label="Save" (click)="(save)" />
+    </div>
+  </p-dialog>
+</div>
+-->
