--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -1,9 +1,6 @@
 <nav class="h-16 border-b bg-white font-sans font-normal flex">
   <div class="flex items-center gap-6 h-full w-1/2 pl-4">
-    <div
-      class="h-8 w-8 bg-gray-dark rounded-full text-white grid place-content-center text-xl">
-      P
-    </div>
+    <span class="pi pi-book text-xl"></span>
     <span class="text-neutral-400 text-lg">/</span>
     <div class="flex gap-2 items-center">
       <app-user-avatar [label]="getInitial()" />
